--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -36,6 +36,7 @@
   border-color: rgba(255, 255, 255, .25);
   box-shadow: 0 4px 8px -2px rgba(0, 0, 0, .25);
   background-color: rgba(0, 0, 0, .8);
+  color: var(--nav-txt);
   backdrop-filter: blur(24px) saturate(120%);
   transition: all .5s;
   z-index: 100000;
