Navigation: Hide Products category and Podcast item.

--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -10,18 +10,20 @@
         </ul>
       </div>
       <div class="site-link-section">
+        <!--
         <h4>{{ _('Products') }}</h4>
         <ul>
           <li><a href="{{ url('thunderbird.index') }}" class="dotted">{{_('Thunderbird Desktop')}}</a></li>
           <li><a href="{{ url('thunderbird.index') }}" class="dotted">{{_('Thunderbird Mobile')}}</a></li>
         </ul>
+        -->
       </div>
       <div class="site-link-section">
         <h4>{{ _('Resources') }}</h4>
         <ul>
           <li><a href="{{ url('blog') }}" class="dotted">{{_('Blog')}}</a></li>
           <li><a href="{{ url('support') }}" class="dotted">{{_('Get Help')}}</a></li>
-          <li><a href="{{ url('blog') }}" class="dotted">{{_('Podcasts')}}</a></li>
+          <!--<li><a href="{{ url('blog') }}" class="dotted">{{_('Podcasts')}}</a></li>-->
           <li><a href="{{ url('thunderbird.download') }}" class="dotted">{{_('Downloads')}}</a></li>
           <li><a href="{{ url('support') }}" class="dotted">{{_('Release Notes')}}</a></li>
         </ul>
