General: Fix button and svg styling.

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -73,7 +73,7 @@ a.btn::after {
   background-size: 400%;
   background-position: center;
   opacity: .5;
-//  inset: 0;
+  inset: 0;
   z-index: -1;
   transition: all .3s;
 }
