Navigation: Make Donate button small.

--- a/sites/www.thunderbird.net/includes/base/nav.html
+++ b/sites/www.thunderbird.net/includes/base/nav.html
@@ -82,8 +82,8 @@
   </li>
   <li class="nav-entry no-border no-mobile">
     <div class="header-donate">
-      <a href="{{ donate_url('header') }}" class="btn" aria-label="Donate">
-        <span>{{ svg('heart') }}</span>
+      <a href="{{ donate_url('header') }}" class="btn" aria-label="{{ _('Donate') }}" title="{{ _('Donate') }}">
+        <span aria-hidden="true">{{ svg('heart') }}</span>
       </a>
     </div>
   </li>
