Home: Change download button to a simple link, and add the android icon.

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -189,6 +189,7 @@ button:hover::after {
 
 // Make the smart download button a bit larger
 .download-button {
+  margin: 2rem;
   .btn-download {
     font-size: var(--font-lg);
     font-weight: 400;
