--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -266,6 +266,11 @@ h1, h2 {
   top: -2px;
 }
 
+.icon-android {
+  position: relative;
+  top: -4px;
+}
+
 .icon .icon-linux-fg {
   fill: transparent !important;
 }
