Download: Remove channel name gradient, make beta, daily and smaller, and move the giant block of style to a site block.

--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -1,4 +1,11 @@
 .page-download {
+  .channel-name {
+    &.beta,
+    &.daily {
+      font-size: 70%;
+    }
+  }
+
   .pretend-to-be-h6 {
     display: inline-block;
     margin-top: 1rem;
