--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -43,19 +43,20 @@
     }
   }
 
-  .section-text :where(h2) {
+  
+  .section-heading {
     font-size: 2.75rem;
     font-weight: 800;
     margin: 0;
   }
-
+/*
   .section-text :where(h3) {
     font-size: 1.4rem;
     font-weight: 300;
     margin: 0;
     margin-bottom: 2em;
   }
-
+*/
   .testimonials {
     @media (max-width: @lg) {
       grid-template-columns: repeat(3, 1fr);
