Accordion: Add some spacing between an icon and heading text.

--- a/assets/less/new/components/accordion.less
+++ b/assets/less/new/components/accordion.less
@@ -2,6 +2,12 @@
   position: relative;
   width: 100%;
 
+  span {
+    display: flex;
+    align-content: center;
+    margin-right: 0.5rem;
+  }
+
   // Need a min-width that's the length of the answers text, 900px works..
   min-width: 900px;
   min-height: 16px;
