--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -1,4 +1,18 @@
 .page-release-notes {
+  .accordion {
+    width: 100%;
+    min-width: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .release-text {
+    margin-bottom: 2rem;
+    li {
+      list-style: none;
+    }
+  }
+
   .wide {
     width: 60%;
   }
