--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -6,10 +6,21 @@
     margin-right: auto;
   }
 
+  .release-notes-container {
+    padding-top: 0;
+  }
+
   .release-text {
+    text-align: left;
     margin-bottom: 2rem;
     li {
       list-style: none;
+    }
+  }
+
+  .system-requirements {
+    ul {
+      .styled-list();
     }
   }
 
