--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -37,18 +37,21 @@
     }
   }
 
-  .note-container {
-    display: grid;
-    grid-template-columns: 7rem 2fr;
-    grid-template-rows: 1fr;
+  .note-flex {
+    display: flex;
     align-items: start;
-    margin-bottom: 1rem;
+    flex-direction: row;
   }
 
+  .note-container {
+    display: flex;
+    align-items: start;
+    margin-bottom: 1rem;
+    flex-direction: column;
+  }
 
   .note-category {
     margin: 0 1rem 0 0;
-    grid-row: 1;
 
     .category-icon {
       width: 1.5rem;
@@ -57,7 +60,6 @@
 
     .category-container {
       display: flex;
-      //align-items: center;
       gap: 0.5rem;
       text-transform: capitalize;
     }
@@ -66,7 +68,6 @@
   .note-text {
     text-align: left;
     font-weight: 500;
-    grid-row: 1;
 
     p {
       margin: 0;
@@ -75,13 +76,11 @@
 
   .note-bug-numbers {
     width: 100%;
-    grid-row: 2;
-    grid-column: 1 / span 2;
 
     p {
       display: flex;
       flex-direction: row;
-      justify-content: center;
+      justify-content: left;
       gap: 1rem;
     }
 
