--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -6,6 +6,7 @@
 @import "./new/sizing.less";
 @import "./new/layout.less";
 @import "./new/variables.less";
+
 // Components
 @import "./new/components/accordion.less";
 @import "./new/components/buttons.less";
@@ -21,4 +22,5 @@
 @import "./pages/participate.less";
 @import "./pages/download.less";
 @import "./pages/release-notes.less";
+@import "./pages/releases.less";
 
