--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -125,7 +125,7 @@
     <div class="cta">
       <a href="{{ url('blog') }}" class="cta-ln">{{_('Visit Our Blog')}}</a>
     </div>
-    <div class="phone">
+    <div class="phone" aria-hidden="true">
       <picture>
         <source srcset="/media/img/thunderbird/new/phone/cta-phone.avif" type="image/avif">
         <source srcset="/media/img/thunderbird/new/phone/cta-phone.webp" type="image/webp">
