Fix footer nav's release note link, and minor clean up.

--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -25,7 +25,7 @@
           <li><a href="{{ url('support') }}" class="dotted">{{_('Get Help')}}</a></li>
           {# <li><a href="{{ url('blog') }}" class="dotted">{{_('Podcasts')}}</a></li> #}
           <li><a href="{{ url('thunderbird.download') }}" class="dotted">{{_('Downloads')}}</a></li>
-          <li><a href="{{ url('support') }}" class="dotted">{{_('Release Notes')}}</a></li>
+          <li><a href="{{ url('thunderbird.releases.index') }}" class="dotted">{{_('Release Notes')}}</a></li>
         </ul>
       </div>
       <div class="site-link-section">
