Downloads: Replace /downloads with a placeholder. This will probably be a redirect back to home later.

--- a/sites/www.thunderbird.net/includes/download-button.html
+++ b/sites/www.thunderbird.net/includes/download-button.html
@@ -70,10 +70,10 @@
   {% if not hide_footer_links %}
   <p class="download-other download-other-desktop os_android os_ios os_linux os_linux64 os_osx os_win os_win64 os_winsha1 font-sm mt-0">
     {% if section == 'homepage-hero' %}{# New frontpage should only display System & Languages #}
-      <a href="{{ url('thunderbird.download') }}" class="small-link {% if section == 'body' %} text-blue {% endif %}">{{ _('Download options and other languages') }}</a>
+      <a href="{{ url('thunderbird.download.all') }}" class="small-link {% if section == 'body' %} text-blue {% endif %}">{{ _('Download options and other languages') }}</a>
     {% else %}
       {% if channel != 'daily' %}{# Daily doesn't have an all download page or release notes. #}
-        <a href="{{ url('thunderbird.download') }}" class="small-link {% if section == 'body' %} text-blue {% endif %}">{{ _('Download options and other languages') }}</a> &bull;
+        <a href="{{ url('thunderbird.download.all') }}" class="small-link {% if section == 'body' %} text-blue {% endif %}">{{ _('Download options and other languages') }}</a> &bull;
         <a href="{{ thunderbird_url('releasenotes', channel) }}" class="small-link {% if section == 'body' %} text-blue {% endif %}">{{ _('What’s New') }}</a> &bull;
       {% endif %}
       <a href="{{ url('privacy.notices.thunderbird') }}" class="small-link {% if section == 'body' %} text-blue {% endif %}">{{ _('Privacy') }}</a>
