All Downloads: Mock up a dropdown selection version.

--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -1,6 +1,13 @@
 .page-download {
   .accordion {
+    margin-top: 1rem;
     min-width: auto;
+  }
+
+  // TODO: Fix this in place
+  .download-button {
+    color: var(--txt);
+    text-align: center;
   }
 
   .channel-name {
