All Downloads: Style fixes for mobile.

--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -42,6 +42,10 @@
           // Pull up the text a bit
           margin-top: 0;
         }
+
+        @media (max-width: @lg) {
+          padding: 0;
+        }
       }
     }
 
@@ -55,7 +59,6 @@
 
     @media (max-width: @md) {
       width: 100%;
-      flex-direction: column-reverse;
 
       .column {
         max-width: 100%;
