All Downloads: Remove the background colour from the download button.

--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -8,6 +8,9 @@
   .download-button {
     color: var(--txt);
     text-align: center;
+    a::after {
+      background: none;
+    }
   }
 
   .channel-name {
