--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -1,3 +1,11 @@
+.js #all-downloads {
+  display: none;
+}
+
+.no-js #select-download {
+  display: none;
+}
+
 .page-download {
   .accordion {
     margin-top: 1rem;
@@ -8,6 +16,7 @@
   .download-button {
     color: var(--txt);
     text-align: center;
+
     a::after {
       background: none;
     }
@@ -182,6 +191,50 @@
       border-radius: 3px;
       padding-left: 1rem;
       margin-left: -1rem;
+    }
+  }
+
+
+  // These need to be moved into a global file for products-all-macros eventually!
+  .all-downloads-legend {
+    ul {
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+      gap: 2rem;
+      justify-content: center;
+    }
+
+    li {
+      font-size: var(--font-lg);
+      color: var(--color-ink-70);
+    }
+  }
+
+  .all-downloads-container {
+    display: flex;
+    flex-direction: column;
+
+    .products-letter-legend {
+      font-size: var(--font-4xl);
+      color: var(--color-ink-70);
+    }
+    .product-row {
+      display: flex;
+      flex-direction: column;
+    }
+    .product-row-downloads {
+      display: flex;
+      flex-direction: column;
+      div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 2rem;
+        margin-bottom: 1rem;
+      }
     }
   }
 }
