--- a/sites/www.thunderbird.net/includes/_enonly/product-all-macros.html
+++ b/sites/www.thunderbird.net/includes/_enonly/product-all-macros.html
@@ -45,7 +45,7 @@
 
         {% if letter.first != build.name_en[:1] %}
           {% set letter.first = build.name_en[:1] %}
-          <h4 id="{{ letter.first }}" class="font-2xl font-bold w-full mt-0 mb-2 pt-6 pl-3 text-black-lightest">
+          <h4 id="{{ letter.first }}" class="products-letter-legend">
             {{ letter.first }}
           </h4>
         {% endif %}
@@ -59,26 +59,26 @@
 {% endmacro %}
 
 {% macro build_row(platforms, build) %}
-  <aside id="{{ build.locale }}" data-search="{{ build.name_en|lower }}, {{ build.name_native|lower }}" class="flex flex-col lg:flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
+  <div id="{{ build.locale }}" data-search="{{ build.name_en|lower }}, {{ build.name_native|lower }}" class="product-row">
     <h4 class="subheader-section flex flex-col flex-1 items-center lg:items-start mb-0 p-2 pl-3 pr-3">
       {{ build.name_en }}
       <small class="font-normal font-regular tracking-normal normal-case text-black-lightest">
         {{ build.name_native }}
       </small>
     </h4>
-    <aside class="flex flex-col p-1 pl-2 pr-2 items-center lg:items-end">
-      <aside class="flex flex-row flex-wrap justify-center">
+    <div class="product-row-downloads">
+      <div class="flex flex-row flex-wrap justify-center">
         {% for p_name, p_label in (platforms|list())[:4] %}
           {{ build_button(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en), _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
         {% endfor %}
-      </aside>
-      <aside class="flex flex-row flex-wrap justify-center mt-2 mb-2 lg:mb-0">
+      </div>
+      <div class="flex flex-row flex-wrap justify-center mt-2 mb-2 lg:mb-0">
         {% for p_name, p_label in (platforms|list())[-2:] %}
           {{ build_link(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en), _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
         {% endfor %}
-      </aside>
-    </aside>
-  </aside>
+      </div>
+    </div>
+  </div>
 {% endmacro %}
 
 {#
@@ -91,11 +91,13 @@
     <a href="{{ build.platforms[platform].download_url }}" title="{{ tooltip }}"
       class="btn-download-inline"
       data-download-version="{{ platform }}"
-      data-download-language="{{ build.name_en|lower}}" data-link-type="download"
+      data-download-language="{{ build.name_en|lower}}"
+      data-download-locale="{{ build.locale }}"
+      data-link-type="download"
       {% if platform == 'android' %} data-download-os="Android"
       {% elif platform == 'ios' %} data-download-os="iOS"
       {% else %} data-download-os="Desktop"{% endif %}>
-        <span class="inline-block w-3 mr-1">{{ svg('download') }}</span> {{ text }}
+        <span class="inline-block w-3 mr-1" style="width: 1rem; display: inline-block">{{ svg('download') }}</span> {{ text }}
     </a>
   {% endif %}
 {% endmacro %}
@@ -105,11 +107,13 @@
     <a href="{{ build.platforms[platform].download_url }}" title="{{ tooltip }}"
       class="btn-download-link"
       data-download-version="{{ platform }}"
-      data-download-language="{{ build.name_en|lower}}" data-link-type="download"
+      data-download-language="{{ build.name_en|lower}}"
+      data-download-locale="{{ build.locale }}"
+      data-link-type="download"
       {% if platform == 'android' %} data-download-os="Android"
       {% elif platform == 'ios' %} data-download-os="iOS"
       {% else %} data-download-os="Desktop"{% endif %}>
-        <span class="inline-block w-3 mr-1">{{ svg('download') }}</span> {{ text }}
+        <span class="inline-block w-3 mr-1" style="width: 1rem; display: inline-block">{{ svg('download') }}</span> {{ text }}
     </a>
   {% endif %}
 {% endmacro %}
