--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -23,4 +23,4 @@
 @import "./pages/download.less";
 @import "./pages/release-notes.less";
 @import "./pages/releases.less";
-
+@import "./pages/system-requirements.less";
