System Requirements: Add scoping for styling...

--- a/assets/less/pages/system-requirements.less
+++ b/assets/less/pages/system-requirements.less
@@ -1,17 +1,20 @@
 .page-system-requirements {
-  ul {
-    .styled-list();
-  }
-  li {
-    p {
-      display: inline-block;
-      margin-left: 0.5rem;
+  .release-notes-container {
+    ul {
+      .styled-list();
     }
-  }
 
-  hr {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    li {
+      p {
+        display: inline-block;
+        margin-left: 0.5rem;
+      }
+    }
+
+    hr {
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+    }
   }
 
   .section-text {
