Navigation: Place the smart download button in header, and adjust button sizing.

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -14,8 +14,10 @@
   }
 }
 .header-donate {
+  margin-left: -1rem;
+
   a.btn {
-    padding: .5em 1em;
+    padding: 0.75em 1em;
   }
 
   a.btn::after {
