--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -21,7 +21,7 @@
   }
 
   .release-text {
-    text-align: left;
+    text-align: center;
     margin-top: 2rem;
     margin-bottom: 2rem;
     li {
@@ -107,5 +107,10 @@
     a:last-child::after {
       content: '';
     }
+  }
+
+  .see-all-releases {
+    margin-top: 6rem;
+    font-size: var(--font-lg);
   }
 }
