--- a/sites/www.thunderbird.net/includes/_enonly/release-notes.html
+++ b/sites/www.thunderbird.net/includes/_enonly/release-notes.html
@@ -11,7 +11,7 @@
 
 {# channel_name is for display purposes where needed.  #}
 {% set channel_name = channel_name|default('') %}
-{% set is_beta = channel_name == "Beta" %}
+{% set show_bugs = channel_name == "Beta" or is_preview|default(False) %}
 
 {% block content %}
 <section>
@@ -54,7 +54,7 @@
       {% set section = namespace(name='') %}
       {% set release_group = namespace(name='') %}
       {% for group in range(release.groups|length) %}
-      {% if release.groups[group]|trim %}
+      {% if release.groups[group] and release.groups[group]|trim %}
       <h1 class="release-group">
         {{ release.groups[group] }}
       </h1>
@@ -105,7 +105,7 @@
             {{ note.note|markdown|safe }}
           </div>
         </div>
-        {% if is_beta %}
+        {% if show_bugs %}
         <aside class="note-bug-numbers">
           {{ note.bug_links|markdown|safe }}
         </aside>
@@ -145,6 +145,9 @@
       </aside>
       {% endfor %}
       {% endif %}
+      <div class="see-all-releases">
+        <a class="strong" href="{{ url('thunderbird.releases.index') }}">{{ _('See All Releases') }}</a>
+      </div>
     </div>
 
   </div>
