--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -18,7 +18,8 @@
   margin-left: -1rem;
 
   a.btn {
-    padding: 0.75em 1em;
+    padding: 0.72em 1em;
+    border-width: 2px;
   }
 
   a.btn::after {
