All Downloads: Fix so style only applies to the in-page download button.

--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -13,7 +13,7 @@
   }
 
   // TODO: Fix this in place
-  .download-button {
+  .download-button-page {
     margin-top: 5rem;
     color: var(--txt);
     text-align: center;
