All: Split pre-footer styling into a new component less file.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -13,6 +13,7 @@
 @import "./new/components/forms.less";
 @import "./new/components/site-nav.less";
 @import "./new/components/testimonial.less";
+@import "./new/components/pre-footer.less";
 
 // Page imports
 @import "./pages/donations.less";
