Newsletter: Add the newsletter landing page.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -25,3 +25,4 @@
 @import "./pages/release-notes.less";
 @import "./pages/releases.less";
 @import "./pages/system-requirements.less";
+@import "./pages/newsletter.less";
