--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -81,10 +81,12 @@
     <div class="section-text">
       <h2>{{_('Learn What’s <span class="txt-gradient">Next</span>')}}</h2>
       <p>
+        {% block post_content_copy %}
         {% trans %}
         Thunderbird keeps getting better. Subscribe to our newsletter and follow us on social media to stay
         informed.
         {% endtrans %}
+        {% endblock %}
       </p>
     </div>
     <div class="newsletter">
