Home: Add a max-width to the thunderbird planet, and adjust centering.

--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -63,7 +63,7 @@
     overflow: hidden;
 
     .container {
-      margin-bottom: 330px;
+      margin-bottom: 400px;
     }
 
     .cta {
@@ -75,6 +75,11 @@
     position: absolute;
     inset: 0;
     z-index: -1;
+    max-width: 1900px;
+
+    display: flex;
+    justify-content: center;
+    margin: auto;
   }
 
   .planet-thunderbird {
@@ -83,7 +88,7 @@
     bottom: 0;
     filter: drop-shadow(0 0 50px var(--color-blue-20));
 
-    left: -11.5%;
+    left: -11.25%;
 
     picture, img {
       max-width: 110%;
