All: General outline style and fixed hamburger not having one.

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -1,3 +1,12 @@
+@import "../functions.less";
+
+.btn,
+.btn-download,
+[type="button"] {
+  @outline();
+}
+
+
 /* Remove some list padding */
 .download-dumb > ul {
   padding: 0;
