--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -21,14 +21,16 @@
   z-index: 100000;
 }
 
-.site-nav .btn-donate::before,
-.site-nav .btn-donate-lg::before,
-.site-nav .btn-download-inline::before,
-.site-nav .btn-download-link::before,
-.site-nav .download-link.btn-download::before,
-.site-nav a.btn::before,
-.site-nav button::before {
-  display: none;
+.site-nav {
+  .btn-donate::before,
+  .btn-donate-lg::before,
+  .btn-download-inline::before,
+  .btn-download-link::before,
+  .download-link.btn-download::before,
+  a.btn::before,
+  button::before {
+    display: none;
+  }
 }
 
 .scrolled-nav {
