--- a/assets/less/new/links.less
+++ b/assets/less/new/links.less
@@ -1,4 +1,8 @@
+@import "./functions.less";
+
 a {
+  @outline();
+
   color: currentColor;
   text-decoration: underline;
   transition: font-size .2s,
