--- a/assets/less/new/variables.less
+++ b/assets/less/new/variables.less
@@ -22,4 +22,10 @@
   --border-radius: var(--border-radius-md);
   --border-color: #DEDEE0;
   --border-size: 1px;
+
+  outline: 1px dotted ButtonText;
+
+  --focus-outline-color: var(--color-blue-50);
+  --focus-outline-offset: 2px;
+  --focus-outline: 2px solid var(--focus-outline-color);
 }
