Navigation: Small sizing tweaks + footer id

--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -9,7 +9,7 @@
           <li><a href="{{ url('thunderbird.index') }}" class="dotted home">{{_('Home')}}</a></li>
         </ul>
       </div>
-      <div class="site-link-section">
+      <div id="footer-nav" class="site-link-section">
         {#
         <h4>{{ _('Products') }}</h4>
         <ul>
