Accessibility: Full stop heading, and fix download page nits.

--- a/sites/www.thunderbird.net/includes/base/nav.html
+++ b/sites/www.thunderbird.net/includes/base/nav.html
@@ -5,7 +5,7 @@
       {{ icon }}
     </div>
     <div class="entry-text">
-      <h2>{{ title }}</h2>
+      <h2 aria-label="{{ title }}.">{{ title }}</h2>
       <h6>{{ description }}</h6>
     </div>
   </a>
