All: Hide breadcrumb for screen readers.

--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -48,7 +48,7 @@
 <header id="masthead">
 
   {% block breadcrumbs %}
-  <div class="breadcrumbs">
+  <div class="breadcrumbs" aria-hidden="true">
     Home > {% block category %}{% endblock %} >
   </div>
   {% endblock %}
